[workspace]
members = [
    "crates/recipe-parser",
    "crates/recp",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
description = "Write recipes in a human readable and machine parseable language"
keywords = ["recipes", "cooking", "markup-language", "recipe-lang"]
license = "MIT"
repository = "https://github.com/reciperium/recipe-lang"
readme = "README.md"
homepage = "https://github.com/reciperium/recipe-lang"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
