[workspace]
members = [
    "crates/recipe-parser",
    "crates/recp",
]
resolver = "2"

[workspace.package]
version = "0.8.2"
edition = "2021"
description = "Write recipes understood by humans and machines"
keywords = ["recipes", "cooking", "markup-language", "recipe-lang"]
license = "MIT"
repository = "https://github.com/reciperium/recipe-lang"
readme = "README.md"
homepage = "https://github.com/reciperium/recipe-lang"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "skip"
# Whether to install an updater program
install-updater = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
