[workspace]
members = [
    "crates/recipe-parser",
    "crates/recp",
]
resolver = "2"

[workspace.package]
version = "0.9.2"
edition = "2024"
description = "Write recipes understood by humans and machines"
keywords = ["recipes", "cooking", "markup-language", "recipe-lang"]
license = "MIT"
repository = "https://github.com/reciperium/recipe-lang"
readme = "README.md"
homepage = "https://github.com/reciperium/recipe-lang"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.2"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "skip"
# Whether to install an updater program
install-updater = true
# Path that installers should place binaries in
install-path = "CARGO_HOME"

[workspace.dependencies]
recipe-parser = { path = "crates/recipe-parser", version = "0.9.2" }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
