[package]
name = "recipe-parser"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
# license = { workspace = true }
license = "MIT"
repository = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
categories = ["command-line-interface", "parser-implementations"]

[dependencies]
winnow = "0.6"
schemars = { version = "0.8.16", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
wasm-bindgen = {version = "0.2.92", optional = true}
tsify = { version = "0.4.5", optional = true}

[dev-dependencies]
rstest = "0.17.0"
serde_json = "1.0"

[lib]
path = "src/lib.rs"

[features]

# Adds serde Serialize implementation to Token
serde = ["dep:serde"]
wasm = ["dep:wasm-bindgen", "dep:tsify"]

# Add JsonSchema generation for Token
schemars = ["dep:schemars"]
