[package]
name = "recipe-parser"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
# license = { workspace = true }
license = "MIT"
repository = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
categories = ["command-line-interface", "parser-implementations"]

[dependencies]
winnow = "0.7"
schemars = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
wasm-bindgen = {version = "0.2.105", optional = true}
tsify = { version = "0.5", optional = true}

[dev-dependencies]
rstest = "0.26.1"
serde_json = "1.0"

[lib]
path = "src/lib.rs"

[features]

# Adds serde Serialize implementation to Token
serde = ["dep:serde"]
wasm = ["dep:wasm-bindgen", "dep:tsify"]

# Add JsonSchema generation for Token
schemars = ["dep:schemars"]
